fixing spacing of elements

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   background-image: url("bg.jpg");
 }
+
 header {
   width: 80%;
   margin-left: 10%;
@@ -24,29 +25,19 @@ header {
   border-left: solid #ffd24a 1px;
   border-right: solid #ffd24a 1px;
   padding-top: 1%;
-  padding-bottom: 10%;
+  padding-bottom: 3%;
+  background-color: #ff8523;
 }
 
 #logo {
-  padding-top: 2px;
-  padding-left: 2px;
-  padding-bottom: 2px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 6px;
 }
 
-section {
-  background-color: white;
-  width: 76%;
-  margin-left: 10%;
-  margin-right: 10%;
-  border: solid white 1px;
-  border-left: solid #ffd24a 1px;
-  border-right: solid #ffd24a 1px;
-  padding: 2%;
-  padding-top: 5%;
-}
-
-#site_header {
-  background-color: #ff8523;
+.main_navigation {
+  padding-left: 10px;
+  padding-top: 4px;
 }
 
 #first_button, #second_button, #third_button {
@@ -55,12 +46,30 @@ section {
   padding-top: 5px;
   padding-left: 20px;
   padding-right: 20px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   text-decoration: none;
   color: white;
   font-size: 12px;
-  margin-bottom: 10px;
   margin-top: 5px;
+}
+
+hr {
+  height: 8px;
+  border: 0;
+  box-shadow: inset 0 8px 8px -8px rgba(0, 0, 0, 0.5);
+}
+
+#page_content {
+  background-color: white;
+  width: 76%;
+  margin-left: 10%;
+  margin-right: 10%;
+  border: solid white 1px;
+  border-left: solid #ffd24a 1.5px;
+  border-right: solid #ffd24a 1.5px;
+  padding: 2%;
+  padding-top: 3%;
+  line-height: 1.6;
 }
 
 h2 {
@@ -79,6 +88,7 @@ ul {
 table {
   border: solid 1px #1fabe5;
   border-collapse: collapse;
+  margin: 0 auto;
 }
 
 thead {
@@ -86,9 +96,10 @@ thead {
   color: white;
   padding: 2x;
   border: solid 1px #046c97;
+  border-collapse: collapse;
 }
 td {
-  border: solid 1px #1fabe5;
+  border: solid 1px #046c97;
   text-align: center;
 }
 td img {
